fix(compass): add main-footer

--- a/src/patternfly/demos/Compass/compass--card-view.hbs
+++ b/src/patternfly/demos/Compass/compass--card-view.hbs
@@ -121,6 +121,13 @@
           {{/l-flex}}
         {{/compass-panel}}
       {{/compass-content}}
+      {{#> compass-main-footer}}
+        {{#> compass-message-bar}}
+          {{#> compass-panel compass-panel--HasNoPadding=true compass-panel--HasNoBorder=true compass-panel--IsPill=true}}
+            chatbot message bar
+          {{/compass-panel}}
+        {{/compass-message-bar}}
+      {{/compass-main-footer}}
     {{/compass-main}}
     {{#> compass-sidebar compass-sidebar--IsEnd=true}}
       {{#> compass-panel compass-panel--IsPill=true}}
@@ -143,10 +150,5 @@
         {{/action-list}}
       {{/compass-panel}}
     {{/compass-sidebar}}
-    {{#> compass-footer}}
-      {{#> compass-footer-main}}
-        {{#> compass-panel compass-panel--HasNoPadding=true compass-panel--HasNoBorder=true compass-panel--IsPill=true}}chatbot message bar{{/compass-panel}}
-      {{/compass-footer-main}}
-    {{/compass-footer}}
   {{/compass}}
 {{/compass--demo-context}}
