--- a/src/patternfly/components/Compass/compass.scss
+++ b/src/patternfly/components/Compass/compass.scss
@@ -68,7 +68,7 @@
   justify-content: center;
   height: 100dvh;
   padding: var(--#{$compass}--Padding);
-  overflow-x: hidden;
+  overflow: hidden;
   background-image: var(--#{$compass}--BackgroundImage);
   background-size: cover;
 
