feat: add docked nav

--- a/src/patternfly/components/Compass/compass.hbs
+++ b/src/patternfly/components/Compass/compass.hbs
@@ -5,8 +5,8 @@
   {{setModifiers
     compass--IsStart='pf-m-start'
     compass--IsEnd='pf-m-end'
-    compass--modifier=compass--modifier
-  }}"
+    compass--IsMaxCanvas='pf-m-max-canvas'
+    compass--modifier=compass--modifier}}"
   {{#if compass--attribute}}
     {{{compass--attribute}}}
   {{/if}}>
