--- a/src/patternfly/components/Nav/nav.hbs
+++ b/src/patternfly/components/Nav/nav.hbs
@@ -3,6 +3,7 @@
       nav--IsHorizontal='pf-m-horizontal'
       nav--IsHorizontalSubnav='pf-m-horizontal pf-m-subnav'
       nav--IsScrollable='pf-m-scrollable'
+      nav--IsDocked='pf-m-docked'
       nav--modifier=nav--modifier
     }}"
   {{#ifAny aria-label nav--aria-label}}
