--- a/src/patternfly/demos/Masthead/masthead-template-content-toolbar-content.hbs
+++ b/src/patternfly/demos/Masthead/masthead-template-content-toolbar-content.hbs
@@ -38,6 +38,31 @@
         {{/nav-list}}
       {{/nav}}
     {{/toolbar-item}}
+  {{else if masthead-template--HasDockedNav}}
+    {{#> nav nav--attribute='aria-label="Global"'}}
+      {{#> nav-list}}
+        {{#> nav-item}}
+          {{#> nav-link nav-link--href="#" nav-link--icon="cube"}}
+            Link 1
+          {{/nav-link}}
+        {{/nav-item}}
+        {{#> nav-item}}
+          {{#> nav-link nav-link--href="#" nav-link--current="true" nav-link--icon="folder"}}
+            Current link
+          {{/nav-link}}
+        {{/nav-item}}
+        {{#> nav-item}}
+          {{#> nav-link nav-link--href="#" nav-link--icon="cloud"}}
+            Link 3
+          {{/nav-link}}
+        {{/nav-item}}
+        {{#> nav-item}}
+          {{#> nav-link nav-link--href="#" nav-link--icon="code"}}
+            Link 4
+          {{/nav-link}}
+        {{/nav-item}}
+      {{/nav-list}}
+    {{/nav}}
   {{/if}}
   {{> masthead-template-content-icon-group}}
 {{/toolbar-content-section}}
