--- a/src/patternfly/demos/Page/page-template.hbs
+++ b/src/patternfly/demos/Page/page-template.hbs
@@ -1,4 +1,9 @@
-{{#> page page--id=page-template--id page--modifier=page-template--modifier page-template-masthead-drilldown--IsHidden="true" page--HasNoSidebar=page-template--HasNoSidebar}}
+{{#> page
+    page--id=page-template--id
+    page--modifier=page-template--modifier
+    page-template-masthead-drilldown--IsHidden="true"
+    page--HasNoSidebar=page-template--HasNoSidebar
+    page--IsDocked=masthead-template--HasDockedNav}}
   {{#unless page-template--HasNoMasthead}}
     {{> masthead-template masthead-template--id=(concat page--id '-masthead')}}
   {{/unless}}
