--- a/src/patternfly/components/Compass/compass.scss
+++ b/src/patternfly/components/Compass/compass.scss
@@ -86,6 +86,29 @@
   background-image: var(--#{$compass}--BackgroundImage);
   background-size: cover;
 
+  &.pf-m-max-canvas {
+    grid-template-areas: "header main";
+    grid-template-rows: auto;
+    grid-template-columns: auto 1fr;
+    align-items: stretch;
+    padding: 0;
+
+    .#{$compass}__main {
+      padding: var(--#{$compass}--Padding);
+    }
+
+    .#{$compass}__header {
+      display: block;
+      margin-block-end: 0;
+
+      > .#{$masthead} {
+        background-color: var(--#{$compass}__panel--BackgroundColor);
+        backdrop-filter: var(--#{$compass}__panel--BackdropFilter);
+        border-color: var(--#{$compass}__panel--BorderColor);
+      }
+    }
+  }
+
   :root:where(.#{$pf-prefix}theme-dark) & {
     --#{$compass}--BackgroundImage: var(--#{$compass}--BackgroundImage--dark);
   }
